# revenant-collector-cpp-wrapper

./: .gitignore  CMakeLists.txt  RevenantCollectorCppConfig.cmake.in  RevenantCollectorCppMacros.cmake
.github/workflows/: unit_tests.yml
include/: DumpConfigDesc.h  RVector.h  RVectorBase.h  UserDataDesc.h  UserDataType.h  descriptors.h  revenant-collector.hpp
include/model/: snapshotconfigdesc.h  snapshotresult.h  stackentry.h  userdatadesc.h  userdatatypeenum.h
include/revenant/: revenant-collector.hpp
private/: FFIExtractor.h
private/interface/: ijsonable.h
private/model/: snapshotjson.h  userdatavalue.h
private/service/: snapshotservice.h  stacktraceservice.h  userdataservice.h
rust/: Cargo.toml
rust/src/: lib.rs  stack_entry.rs  table.rs
rust/src/ffi/: mod.rs  stack_entry_ffi.rs
src/: DumpConfigDesc.cpp  FFIExtractor.cpp  RVector.cpp  RVectorBase.cpp  UserDataDesc.cpp  revenant-collector.cpp  stackentry.cpp
src/model/: snapshotjson.cpp  snapshotresult.cpp  stackentry.cpp  userdatavalue.cpp
src/service/: snapshotservice.cpp  stacktraceservice.cpp  userdataservice.cpp
test/: CMakeLists.txt  rvector.cpp  snapshotservice.cpp  stackentry.cpp  stacktrace.cpp  userdataservice.cpp
